SERVER-12914 initAndListen call dbexit if invalid IndexSpec found